nullaway_error_5622F327-26FA-4A96-A295-F005A190B48A.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-webflux/src/main/java/org/springframework/web/reactive/result/method/RequestMappingInfo.java:598: error: [NullAway] dereferenced expression patterns is @Nullable
                        List<PathPattern> result = new ArrayList<>(patterns.length);
                                                                           ^
    (see http://t.uber.com/nullaway )
